<resources>
    <string name="app_name">Susans Green Cleaning</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod">Lorem ipsum dolor sit amet,\n consectetur adipiscing elit, sed do\n eiusmod</string>
    <string name="zip_code">Zip Code</string>
    <string name="okay">Okay</string>
    <string name="seems_we_don_t_serve_your_area_but_we_will_try_to_fix_it">Seems we don\'t serve your area.\n But we will try to fix it.</string>
    <string name="sorry">Sorry</string>
    <string name="welcome_to">Welcome to</string>
    <string name="susan_s">Susan’s</string>
    <string name="green_cleaning">Green Cleaning</string>
    <string name="_5_stars_review">5 Stars Review</string>
    <string name="about_us">About Us</string>
    <string name="book">Book</string>
    <string name="call">Call</string>
    <string name="schedule_cleaning">Schedule Cleaning</string>
    <string name="create_reminder">Create Reminder</string>
    <string name="set_date">Set date</string>
    <string name="set_time">Set time</string>
    <string name="repeat">Repeat</string>
    <string name="new_reminder">New Reminder</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enter_zip_code">Enter Zip Code</string>
    <string name="error">Error</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">Ok</string>
</resources>