<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/item_background"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/error"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="18sp"
            android:textColor="@color/gray_dark"/>

        <TextView
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:textSize="14sp"
            android:layout_below="@+id/logo"
            android:textColor="@color/gray"
            android:gravity="center"
            android:text="jrjksrnf  skejfjnsr kjvnsr vjs vlk"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/yesBtn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/secondary_text"
                android:textAllCaps="false"
                android:text="@string/ok"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/noBtn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/secondary_text"
                android:textAllCaps="false"
                android:text="@string/no"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>