<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SorryFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat_extra_bold"
        android:textSize="39sp"
        android:layout_above="@+id/logo_container"
        android:textColor="@color/green_main"
        android:layout_marginBottom="50dp"
        android:text="@string/sorry" />

    <RelativeLayout
        android:id="@+id/logo_container"
        android:layout_width="match_parent"
        android:layout_centerVertical="true"
        android:layout_height="380dp">

        <RelativeLayout
            android:layout_width="310dp"
            android:layout_height="280dp"
            android:layout_centerHorizontal="true">

            <ImageView
                android:layout_width="280dp"
                android:layout_height="280dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ellipse_dot"/>
            <ImageView
                android:id="@+id/stars_top"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/stars"/>

            <ImageView
                android:id="@+id/stars_bottom"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/stars"/>

        </RelativeLayout>
        <ImageView
            android:id="@+id/boarder"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:paddingStart="22dp"
            android:paddingTop="8dp"
            android:src="@drawable/board"
            tools:ignore="RtlSymmetry" />

    </RelativeLayout>

    <TextView
        android:id="@+id/secondary_text"
        android:layout_width="284dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/roboto_regular"
        android:textSize="16sp"
        android:layout_below="@+id/logo_container"
        android:textColor="@color/gray"
        android:gravity="center"
        android:lines="2"
        android:text="@string/seems_we_don_t_serve_your_area_but_we_will_try_to_fix_it" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/okay_btn"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/secondary_text"
        android:textAllCaps="false"
        android:text="@string/okay"/>

</RelativeLayout>