<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="25dp">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/fairy" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/f_line_start"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/roboto_light"
                            android:text="@string/welcome_to"
                            android:textColor="@color/gray_light"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/f_line_end"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/f_line_start"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/susan_s"
                            android:textColor="@color/gray_dark"
                            android:textSize="27sp" />


                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/s_line"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/green_cleaning"
                            android:textColor="@color/green_main"
                            android:textSize="27sp" />
                    </RelativeLayout>

                </LinearLayout>

                <ImageView
                    android:id="@+id/notification_on"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:visibility="gone"
                    android:src="@drawable/ic_notifications_on" />

                <ImageView
                    android:id="@+id/notification_off"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:visibility="visible"
                    android:src="@drawable/ic_notifications_off" />


            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_marginStart="2dp"
                android:elevation="0dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
                app:cardPreventCornerOverlap="false"
                app:layout_constraintDimensionRatio="16:9"
                card_view:cardElevation="0dp">

                <ImageView
                    android:id="@+id/gift_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerInside"
                    android:src="@drawable/gift"
                    tools:ignore="ContentDescription" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/_5_stars_review"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="25sp"
                android:textColor="@color/gray_dark"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_contacts"
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/about_us"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="25sp"
                android:textColor="@color/gray_dark"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_about_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="90dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />



        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white"
            android:layout_alignParentBottom="true"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/book_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:text="@string/book"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/call_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:text="@string/call"/>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>