<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.WelcomeFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat_extra_bold"
        android:textSize="39sp"
        android:layout_above="@+id/logo"
        android:textColor="@color/green_main"
        android:layout_marginBottom="50dp"
        android:text="@string/welcome" />

    <RelativeLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_centerVertical="true"
        android:layout_height="380dp">

        <ImageView
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/fairy_round_bg"/>
        <ImageView
            android:id="@+id/stars"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginTop="74dp"
            android:layout_marginStart="48dp"
            android:src="@drawable/stars"/>

<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="288dp"-->
<!--            android:layout_height="80dp"-->
<!--            android:elevation="0dp"-->
<!--            app:cardCornerRadius="6dp"-->
<!--            app:cardElevation="0dp"-->
<!--            app:cardPreventCornerOverlap="false"-->
<!--            app:layout_constraintDimensionRatio="16:9"-->
<!--            card_view:cardElevation="0dp">-->

<!--            <ImageView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:scaleType="centerCrop"-->
<!--                android:src="@drawable/label_text"-->
<!--                tools:ignore="ContentDescription" />-->

<!--        </androidx.cardview.widget.CardView>-->

        <ImageView
            android:layout_width="315dp"
            android:layout_height="170dp"
            android:layout_marginTop="70dp"
            android:layout_below="@+id/stars"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            android:src="@drawable/label_text"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <TextView
        android:id="@+id/secondary_text"
        android:layout_width="284dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/roboto_regular"
        android:textSize="16sp"
        android:layout_below="@+id/logo"
        android:textColor="@color/gray"
        android:gravity="center"
        android:lines="3"
        android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod" />

    <RelativeLayout
        android:id="@+id/edit_zipCod_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:background="@drawable/item_background">

        <EditText
            android:id="@+id/edit_zipCod"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:hint="@string/enter_zip_code"
            android:inputType="date"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingStart="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_hint"
            android:textSize="15sp" />

    </RelativeLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/zip_code_btn"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/secondary_text"
        android:textAllCaps="false"
        android:text="@string/zip_code"/>


</RelativeLayout>