<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_main"
    android:orientation="vertical"
    tools:context=".ui.calendar.CalendarFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/green_main"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="14dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/create_reminder"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_background"
                android:orientation="vertical">

                <CalendarView
                    android:id="@+id/calendarView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray_border" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="20dp"
                            android:src="@drawable/ic_calendar"
                            app:tint="@color/green_main" />

                        <TextView
                            android:id="@+id/set_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/roboto_regular"
                            android:gravity="center_vertical"
                            android:hint="@string/set_date"
                            android:inputType="date"
                            android:paddingTop="12dp"
                            android:paddingBottom="12dp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray_hint"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray_border" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="20dp"
                            android:src="@drawable/ic_time"
                            app:tint="@color/green_main" />

                        <TextView
                            android:id="@+id/set_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/roboto_regular"
                            android:gravity="center_vertical"
                            android:hint="@string/set_time"
                            android:inputType="time"
                            android:paddingTop="12dp"
                            android:paddingBottom="12dp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray_hint"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray_border" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="20dp"
                            android:src="@drawable/ic_repeat"
                            app:tint="@color/green_main" />

                        <TextView
                            android:id="@+id/repeat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/roboto_regular"
                            android:gravity="center_vertical"
                            android:imeOptions="actionDone"
                            android:hint="@string/repeat"
                            android:inputType="date"
                            android:paddingTop="12dp"
                            android:paddingBottom="12dp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray_hint"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray_border" />


                    <EditText
                        android:id="@+id/new_reminder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="center_vertical"
                        android:hint="@string/new_reminder"
                        android:inputType="textCapSentences|textMultiLine"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:imeOptions="actionDone"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray_hint"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="90dp"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/save_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                android:fontFamily="@font/roboto_regular"
                android:textSize="19sp"
                android:gravity="center_horizontal"
                android:textColor="@color/gray_sub_title"/>

            <TextView
                android:id="@+id/cancel_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:fontFamily="@font/roboto_bold"
                android:textSize="19sp"
                android:gravity="center_horizontal"
                android:textColor="@color/green_main"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
